Thu Feb 19 03:28:59 2009  Akinori MUSHA  <knu@iDaemons.org>

	* README.EXT, README.EXT.ja: Improve the document about
	  rb_scan_args() even more.

Thu Feb 19 03:12:51 2009  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_file_exhaustive.rb: skip some tests if euid == 0. 
	  a patch from Lucas Nussbaum in [ruby-core:22209].

Thu Feb 19 03:00:49 2009  Akinori MUSHA  <knu@iDaemons.org>

	* README.EXT, README.EXT.ja: Improve the document about
	  rb_scan_args().

Wed Feb 18 22:47:01 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (discard_cmsg_resource): new function to close
	  file descriptors in control message.
	  (bsock_recvmsg_internal): call discard_cmsg_resource before retrying
	  recvmsg.

Wed Feb 18 21:47:37 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (bsock_recvmsg_internal): prevent misalignment.

Wed Feb 18 21:34:30 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (bsock_sendmsg_internal): prevent misalignment.

Wed Feb 18 21:09:43 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (bsock_recvmsg_internal): reduce code on
	  environments which have no control message.

Wed Feb 18 20:27:16 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (OBJCOPY): set ac_cv_prog_ac_ct_OBJCOPY to do nothing
	  on cygwin and mingw because symbols are exported by def file.

Wed Feb 18 15:35:36 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_chown): use chown unless HAVE_FCHOWN.

	* io.c (pipe_open): sarg is always used unless HAVE_FORK.

Wed Feb 18 15:23:34 2009  Akinori MUSHA  <knu@iDaemons.org>

	* bootstraptest/runner.rb: Use RUBY_DESCRIPTION if defined.

Wed Feb 18 14:33:35 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_resurrect), string.c (rb_str_resurrect): new
	  functions based on [ruby-dev:37983]

	* insns.def (putstring, duparray): use rb_{ary,str}_resurrect().

	* iseq.c (iseq_data_to_ary): needs to result TS_VALUE.
